syntax = "proto3";

package user;

service UserService {
  rpc GetUserinfoById(GetUserinfoByIdReq) returns (GetUserinfoByIdRes) {};
  rpc GetUserinfoByUsername(GetUserinfoByUsernameReq) returns (GetUserinfoByIdRes) {};
  rpc GetUsernameWithImg(GetUsernameWithImgReq) returns (GetUsernameWithImgRes) {};
  rpc GetUsernameWithImgList(GetUsernameWithImgListReq) returns (GetUsernameWithImgListRes) {};
  rpc ChangeUsername(ChangeUsernameReq) returns (ChangeUsernameRes);
  rpc ChangeIntro(ChangeIntroReq) returns (ChangeIntroRes);
  rpc ChangeIntroduceName(ChangeIntroduceNameReq) returns (ChangeIntroRes);
  rpc SearchUsersBySearchString(SearchUsersBySearchStringReq) returns (SearchUsersBySearchStringRes);

}

message GetUserinfoByIdReq {
  string userId = 1;
}
message GetUserinfoByUsernameReq {
  string username = 1;
}
message GetUserinfoByIdRes {
  string userId = 1;
  int32 follower = 2;
  int32 following = 3;
  int32 postcount = 4;
  string img = 5;
  string introduce = 6;
  string username = 7;
  string introduceName = 8;
}

///////////////////////////////////
message GetUsernameWithImgReq {
  string userId = 1;
}
message GetUsernameWithImgRes {
  string img = 1;
  string username = 2;
  string introduceName = 3;
}
///////////////////////////////////
message GetUsernameWithImgListReq {
  repeated string userIds = 1;
}
message userInfo {
  string img = 1;
  string username = 2;
  int32 userId = 3;
  string introduceName = 4;
}
message GetUsernameWithImgListRes {
  repeated userInfo userList = 1;
}
///////////////////////////////////
message ChangeUsernameReq {
  string userId = 1;
  string username = 2;
}
message ChangeUsernameRes {
  bool success = 1;
  optional bool exist = 2;
}
///////////////////////////////////
message ChangeIntroReq {
  string userId = 1;
  string intro = 2;
}

message ChangeIntroRes {
  bool success = 1;
}

///////////////////////////////////
message ChangeIntroduceNameReq {
  string userId = 1;
  string introduceName = 2;
}

message SearchUsersBySearchStringReq {
  string searchString = 1;
  int32 page = 2;
}
message SearchedUsers {
  string username = 1;
  string img = 2;
  string introduceName = 3;
  string introduce = 4;
}
message SearchUsersBySearchStringRes {
  repeated SearchedUsers userList = 1;
}
