// Original file: src/proto/ffl.proto


export interface userinfo {
  'userId'?: (number);
  'username'?: (string);
  'introduceName'?: (string);
  'img'?: (string);
}

export interface userinfo__Output {
  'userId'?: (number);
  'username'?: (string);
  'introduceName'?: (string);
  'img'?: (string);
}
